--- a/styles/mens.css
+++ b/styles/mens.css
@@ -1,94 +1,100 @@
-body{
-    font-family:  Arial;
+body {
+    font-family: Arial;
 }
-img{
+
+img {
     cursor: pointer;
 }
-#f-main1,#f-main3{
+#men-body{
+    width: 95%;
+    margin: auto;
+}
+#f-main1,
+#f-main3 {
     display: flex;
-    justify-content: space-evenly;
+    justify-content: space-between;
     width: 100%;
     height: auto;
     margin: auto;
     margin-top: 30px;
     margin-bottom: 10px;
-    font-family:  Arial;
+    font-family: Arial;
 }
-#f-main3{
+
+#f-main3 {
     margin-bottom: 100px;
-    font-family:  Arial;
+    font-family: Arial;
 }
-hr{
+
+hr {
     /* border-color: #b3afaf; */
-    width: 95%;
+    width: 100%;
     border: 0.2px solid #b3afaf;
     margin: auto;
-    font-family:  Arial;
+    font-family: Arial;
 }
-#f-cate1
-{
+
+#f-cate1 {
     width: 47%;
     /* border: 1px solid red; */
     text-align: center;
     line-height: 50px;
-    font-family:  Arial;
-}
-#f-cate1>img
-{  
-width: 100%;
-height: 630px;
+    font-family: Arial;
 }
 
-#f-details button
-{
+#f-cate1>img {
+    width: 100%;
+}
+
+#f-details button {
     padding: 15px;
     font-size: 16px;
     background-color: white;
-    font-family:  Arial;
+    font-family: Arial;
     cursor: pointer;
     border: 1px solid black;
-   
+
 
 }
-#f-details button:hover
-{
+
+#f-details button:hover {
     color: white;
     background-color: black;
-    font-family:  Arial;
+    font-family: Arial;
 }
 
-#f-cate2{
+#f-cate2 {
     width: 30%;
     text-align: center;
     line-height: 50px;
-    font-family:  Arial;
+    font-family: Arial;
 }
 
-#lastdiv4
-{
+#lastdiv4 {
     width: 95%;
     margin: auto;
     /* border: 1px solid red; */
     display: flex;
     justify-content: space-between;
-    align-items:center;
+    align-items: center;
     margin-bottom: 2%;
     /* gap: 1%; */
 }
-#lastdiv4>div{
-    width: 379px;
+
+#lastdiv4>div {
+    width: 22%;
     /* height: 349px; */
     /* border: 1px solid black; */
-    
+
 }
-#lady4
-{
-    width: 319px;
+
+#lady4 {
+    width: 100%;
     /* height: 380px; */
     cursor: pointer;
 
 }
-#lastbtn
-{
+
+#lastbtn {
     margin-top: 12%;
 }
