--- a/styles/slider.css
+++ b/styles/slider.css
@@ -24,7 +24,7 @@ body { font-family: sans-serif; }
   display: block;
   max-height: 80%;
   margin: 0 auto;
-  max-width: 100%;
+  max-width: 95%;
   opacity: 0;
  margin-bottom: 20px;
  padding: 20px;
